Fix artists to bottom and fill width on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,6 @@
   --orange_dark: #cc5e20;
   --green: #095157;
 
-
   /* screen sizes */
   --smallPhoneOnly: 349px;
   --phonePlus: 350px;
@@ -129,7 +128,10 @@ main {
 }
 
 .fill-height {
+  display: flex;
+  flex-direction: column;
   height: 100%;
+  justify-content: space-between;
 }
 
 .game {
@@ -156,9 +158,9 @@ main {
 }
 
 .artist-audience {
-  height: 186px;
-  width: 100%;
   background: url('./images/artists.png') no-repeat center;
+  height: 186px;
+  margin: 0 -1rem;
 }
 
 footer {
